--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/LloydDub/tinyapp#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "ejs": "^3.1.6",
     "express": "^4.17.1"
   },
@@ -27,5 +28,3 @@
     "nodemon": "^2.0.12"
   }
 }
-
-
